# async_bevy_web_example

./: Cargo.toml  Makefile.toml  README.md
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: navigation.rs
app/src/pages/: blog.rs  blog_post.rs  home_page.rs  not_found.rs
frontend/: Cargo.toml
generator/: Cargo.toml
generator/src/: main.rs
