[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-bevy-web.workspace = true
app = { path = "../app", default-features = false}
leptos = { workspace = true, features = [ "ssr" ]}
cinnog = { workspace = true, features = ["generator"] }
bevy_ecs.workspace = true
bevy.workspace = true
serde.workspace = true

tokio = { version = "1.33.0", features = ["full"] }
regex = { version = "1.10.2", features = [] }

leptos_router = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6"}

[features]
development = ["cinnog/development"]
